Base HTML and project setup added
Background image
SCSS for colors and commons
Jquery installed
	Base for footer
	Base for header
	# with '#' will be ignored, and an empty message aborts the commit.

--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.bundle.css">
     <title>Miguel Vela</title>
 </head>
-<body>
-    <header>
-    </header>
-
-    <nav>
-        <ul>
-            <li>
-                <span>Home</span>
-            </li>
-            <li>
-                <span>About me</span>
-            </li>
-        </ul>
-    </nav>
+<body >
+    <header></header>
 
     <section>
 
@@ -52,10 +40,13 @@
     <footer>
         <div>
             <ul>
-                <li><a href="https://twitter.com/miguelarian" target="_blank">Twitter</a></li> |
+                <li><a href="https://twitter.com/miguelarian" target="_blank">Twitter</a></li>
                 <li><a href="https://uk.linkedin.com/in/miguelvelar" target="_blank">LinkedIn</a></li>
             </ul>
-            <p>&copy; 2017 Miguel Vela Romera. All rights reserved.</p>
+        </div>
+        <span class="clear"></span>
+        <div>
+          <p>&copy; <span class="current-year"></span> Miguel Vela Romera. All rights reserved.</p>
         </div>
     </footer>
 </body>
