Set new colors and BG image

--- a/src/index.html
+++ b/src/index.html
@@ -8,31 +8,30 @@
     <title>Miguel Vela</title>
 </head>
 <body >
-    <header></header>
+    <header>
+      <div class="wrapper">
+        <h1>Miguel Vela</h1>
+        <h2>Software developer</h2>
+      </div>
+    </header>
 
     <section>
 
         <div>
-            <div><h2>About me</h2></div>
+            <div><h3>About me</h3></div>
         </div>
         <div>
             <p>
-                My name is Miguel Vela Romera. I studied computer science at University of Alicante (Spain) and I currently work as software developer at the United Kingdom.
-                I am an experienced developer and I strongly enjoy programming and discovering new technologies.
-                I never stop learning about software and hardware. In my free time I use to travel to different countries and practise sports.
+                My name is Miguel Vela Romera...
             </p>
             <p>
-                I work for <a target="_blank" href="http://volumeglobal.com">Volume Ltd.</a> My role as part of the innovation team in UK is to develop web advertising projects and platforms by using Microsoft ASP .Net, C#, SQL Server, HTML5, JQuery and other Javascript frameworks. I work together with a team of creative and user experience developers to successfully meet the client expectations and guarantee the best quality of the products.
+                I work for <a target="_blank" href="https://www.payvision.com">Payvision</a>. My role here is to...
             </p>
             <p>
-                I am a very perseverant, committed and hard working individual. I feel passion about mobile/web development, new technologies and the Internet of the Things.
-                With a strict attention to detail, I´m strongly organized and disciplined to meet my own goals and overcome with patience any unexpected problem.
+                I am a very ...
             </p>
             <p>
-                Since I was a child, I have been passionate about computing and robotics.
-                I was one year old when I first sat in front of a PC and since then my curiosity and interest in computers have only continue to grow.
-                I love videogames and technology, and my degree has given me the opportunity to develop applications and create my own solution for an increasing modern society problem.
-                I strongly believe that applying technology to everyday problems, innovate and make the best use of the latest developments are the principles to create a better world.
+                More about me...
             </p>
         </div>
     </section>
